scénario avec uniquement les CVE dont on connait la CWE

--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,19 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import networkx as nx\n",
     "import os\n",
     "import csv\n",
-    "from BAG_Code_tw520.createORtable import create_OR_table\n",
     "from BAG_Code_tw520.BayesianAttackGraphForCVSS import parse_dot\n",
     "from Threat_Inteligence.CWE_tree.parse import parse_xml\n",
     "from BAG_Code_tw520.BayesianAttackGraphForCVSS import change_prob\n",
-    "from pgmpy.factors.discrete import TabularCPD\n",
     "from pgmpy.inference.ExactInference import BeliefPropagation"
    ]
   },
@@ -34,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,21 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nx' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Introducing link between CWEs themselves\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m Gcwe \u001b[38;5;241m=\u001b[39m \u001b[43mnx\u001b[49m\u001b[38;5;241m.\u001b[39mGraph()\n\u001b[0;32m      3\u001b[0m parse_xml(os\u001b[38;5;241m.\u001b[39mgetcwd()\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Threat_Inteligence/CWE_tree/1000.xml\u001b[39m\u001b[38;5;124m'\u001b[39m, Gcwe)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Introducing link between CWEs and CVEs\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'nx' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Introducing link between CWEs themselves\n",
     "Gcwe = nx.Graph()\n",
@@ -96,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -113,16 +98,18 @@
     "# We list the CVE that are before the attacker position\n",
     "src_node = [7, 10, 12, 21, 25, 27]\n",
     "dst_node = [ 14, 16, 18]\n",
+    "# The factor between two successives notes in the CWE tree\n",
+    "factor = 0.9\n",
     "# We always start from the original probabilities of the CVEs\n",
     "BAG = BAG_ref.copy()\n",
     "\n",
     "# We modify the conditional probabilities according to the attacks that have been done\n",
-    "change_prob(BAG, edges, nodes, src_node, dst_node, inverted_nodes, cwe_dict, Gcwe, prop0)"
+    "change_prob(BAG, edges, nodes, src_node, dst_node, inverted_nodes, cwe_dict, Gcwe, prop0, factor)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
