--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -250,9 +250,7 @@
       "222222222222222222222222222222\n",
       "CVE source : 23:RULE 4 (classic quick compromission attack is possible against host or domain):0.2\n",
       "222222222222222222222222222222\n",
-      "CVE source : 25:RULE 4 (classic quick compromission attack is possible against host or domain):0.2\n",
-      "222222222222222222222222222222\n",
-      "CVE source : 27:RULE 8 (admin access is possible):0.2\n"
+      "CVE source : 25:RULE 4 (classic quick compromission attack is possible against host or domain):0.2\n"
      ]
     },
     {
@@ -267,6 +265,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "222222222222222222222222222222\n",
+      "CVE source : 27:RULE 8 (admin access is possible):0.2\n",
       "222222222222222222222222222222\n",
       "CVE source : 30:RULE 9 (privilege escalation):0.2\n",
       "222222222222222222222222222222\n",
@@ -424,212 +424,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:pgmpy:Replacing existing CPD for A\n",
-      "WARNING:pgmpy:Replacing existing CPD for B\n",
-      "WARNING:pgmpy:Replacing existing CPD for C\n",
-      "WARNING:pgmpy:Replacing existing CPD for D\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:pgmpy:Replacing existing CPD for A\n",
-      "WARNING:pgmpy:Replacing existing CPD for B\n",
-      "WARNING:pgmpy:Replacing existing CPD for C\n",
-      "WARNING:pgmpy:Replacing existing CPD for D\n",
-      "WARNING:pgmpy:Replacing existing CPD for A\n",
-      "WARNING:pgmpy:Replacing existing CPD for B\n",
-      "WARNING:pgmpy:Replacing existing CPD for C\n",
-      "WARNING:pgmpy:Replacing existing CPD for D\n",
-      "WARNING:pgmpy:Replacing existing CPD for A\n",
-      "WARNING:pgmpy:Replacing existing CPD for B\n",
-      "WARNING:pgmpy:Replacing existing CPD for C\n",
-      "WARNING:pgmpy:Replacing existing CPD for D\n",
-      "WARNING:pgmpy:Replacing existing CPD for A\n",
-      "WARNING:pgmpy:Replacing existing CPD for B\n",
-      "WARNING:pgmpy:Replacing existing CPD for C\n",
-      "WARNING:pgmpy:Replacing existing CPD for D\n",
-      "WARNING:pgmpy:Replacing existing CPD for A\n",
-      "WARNING:pgmpy:Replacing existing CPD for B\n",
-      "WARNING:pgmpy:Replacing existing CPD for C\n",
-      "WARNING:pgmpy:Replacing existing CPD for D\n",
-      "WARNING:pgmpy:Replacing existing CPD for A\n",
-      "WARNING:pgmpy:Replacing existing CPD for B\n",
-      "WARNING:pgmpy:Replacing existing CPD for C\n",
-      "WARNING:pgmpy:Replacing existing CPD for D\n",
-      "WARNING:pgmpy:Replacing existing CPD for A\n",
-      "WARNING:pgmpy:Replacing existing CPD for B\n",
-      "WARNING:pgmpy:Replacing existing CPD for C\n",
-      "WARNING:pgmpy:Replacing existing CPD for D\n",
-      "WARNING:pgmpy:Replacing existing CPD for A\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "+--------+-----+\n",
+      "| Imp(0) | 0.1 |\n",
+      "+--------+-----+\n",
+      "| Imp(1) | 0.9 |\n",
+      "+--------+-----+\n",
       "+------+----------+\n",
-      "| B    |   phi(B) |\n",
+      "| D    |   phi(D) |\n",
       "+======+==========+\n",
-      "| B(0) |   0.8333 |\n",
+      "| D(0) |   0.3250 |\n",
       "+------+----------+\n",
-      "| B(1) |   0.1667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| C    |   phi(C) |\n",
-      "+======+==========+\n",
-      "| C(0) |   0.3333 |\n",
-      "+------+----------+\n",
-      "| C(1) |   0.6667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| B    |   phi(B) |\n",
-      "+======+==========+\n",
-      "| B(0) |   0.8333 |\n",
-      "+------+----------+\n",
-      "| B(1) |   0.1667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| C    |   phi(C) |\n",
-      "+======+==========+\n",
-      "| C(0) |   0.3333 |\n",
-      "+------+----------+\n",
-      "| C(1) |   0.6667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| B    |   phi(B) |\n",
-      "+======+==========+\n",
-      "| B(0) |   0.8333 |\n",
-      "+------+----------+\n",
-      "| B(1) |   0.1667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| C    |   phi(C) |\n",
-      "+======+==========+\n",
-      "| C(0) |   0.3333 |\n",
-      "+------+----------+\n",
-      "| C(1) |   0.6667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| B    |   phi(B) |\n",
-      "+======+==========+\n",
-      "| B(0) |   0.8333 |\n",
-      "+------+----------+\n",
-      "| B(1) |   0.1667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| C    |   phi(C) |\n",
-      "+======+==========+\n",
-      "| C(0) |   0.3333 |\n",
-      "+------+----------+\n",
-      "| C(1) |   0.6667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| B    |   phi(B) |\n",
-      "+======+==========+\n",
-      "| B(0) |   0.8333 |\n",
-      "+------+----------+\n",
-      "| B(1) |   0.1667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| C    |   phi(C) |\n",
-      "+======+==========+\n",
-      "| C(0) |   0.3333 |\n",
-      "+------+----------+\n",
-      "| C(1) |   0.6667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| B    |   phi(B) |\n",
-      "+======+==========+\n",
-      "| B(0) |   0.8333 |\n",
-      "+------+----------+\n",
-      "| B(1) |   0.1667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| C    |   phi(C) |\n",
-      "+======+==========+\n",
-      "| C(0) |   0.3333 |\n",
-      "+------+----------+\n",
-      "| C(1) |   0.6667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| B    |   phi(B) |\n",
-      "+======+==========+\n",
-      "| B(0) |   0.8333 |\n",
-      "+------+----------+\n",
-      "| B(1) |   0.1667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| C    |   phi(C) |\n",
-      "+======+==========+\n",
-      "| C(0) |   0.3333 |\n",
-      "+------+----------+\n",
-      "| C(1) |   0.6667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| B    |   phi(B) |\n",
-      "+======+==========+\n",
-      "| B(0) |   0.8333 |\n",
-      "+------+----------+\n",
-      "| B(1) |   0.1667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| C    |   phi(C) |\n",
-      "+======+==========+\n",
-      "| C(0) |   0.3333 |\n",
-      "+------+----------+\n",
-      "| C(1) |   0.6667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| B    |   phi(B) |\n",
-      "+======+==========+\n",
-      "| B(0) |   0.8333 |\n",
-      "+------+----------+\n",
-      "| B(1) |   0.1667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| C    |   phi(C) |\n",
-      "+======+==========+\n",
-      "| C(0) |   0.3333 |\n",
-      "+------+----------+\n",
-      "| C(1) |   0.6667 |\n",
-      "+------+----------+\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:pgmpy:Replacing existing CPD for B\n",
-      "WARNING:pgmpy:Replacing existing CPD for C\n",
-      "WARNING:pgmpy:Replacing existing CPD for D\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------+----------+\n",
-      "| B    |   phi(B) |\n",
-      "+======+==========+\n",
-      "| B(0) |   0.8333 |\n",
-      "+------+----------+\n",
-      "| B(1) |   0.1667 |\n",
-      "+------+----------+\n",
-      "+------+----------+\n",
-      "| C    |   phi(C) |\n",
-      "+======+==========+\n",
-      "| C(0) |   0.3333 |\n",
-      "+------+----------+\n",
-      "| C(1) |   0.6667 |\n",
+      "| D(1) |   0.6750 |\n",
       "+------+----------+\n"
      ]
     }
@@ -638,24 +450,25 @@
     "from pgmpy.factors.discrete import TabularCPD\n",
     "from pgmpy.models import BayesianNetwork\n",
     "from pgmpy.inference import BeliefPropagation\n",
-    "bayesian_model = BayesianNetwork([('A', 'B'), ('A', 'C'), ('B', 'D'), ('C', 'D')])\n",
+    "bayesian_model = BayesianNetwork([('A', 'B'), ('A', 'C'), ('B', 'D'), ('C', 'D'), ('Imp', 'B'), ('Imp', 'C'), ('PE', 'B'), ('MITM', 'C')])\n",
     "\n",
-    "# for i in range(10):\n",
-    "    cpt_a = create_OR_table([])\n",
-    "    cpd_a = TabularCPD('A', 2, cpt_a.T)\n",
-    "    cpt_b = create_AND_table([0.5])\n",
-    "    cpd_b = TabularCPD('B', 2, cpt_b.T, ['A'], [2])\n",
-    "    cpt_c = create_AND_table([0.5])\n",
-    "    cpd_c = TabularCPD('C', 2, cpt_c.T, ['A'], [2])\n",
-    "    cpt_d = create_OR_table([1, 1])\n",
-    "    cpd_d = TabularCPD('D', 2, cpt_d.T, ['B', 'C'], [2, 2])\n",
+    "cpt_a =[[0.1], [0.9]]\n",
+    "cpd_a = TabularCPD('A', 2, [[0], [1]])\n",
+    "cpd_imp = TabularCPD('Imp', 2, cpt_a)\n",
+    "cpd_pe = TabularCPD('PE', 2, [[0], [1]])\n",
+    "cpd_mitm = TabularCPD('MITM', 2, [[0], [1]])\n",
+    "cpt_b = create_AND_table([0.5, 1, 1])\n",
+    "cpd_b = TabularCPD('B', 2, cpt_b.T, ['A', 'PE', 'Imp'], [2, 2, 2])\n",
+    "cpt_c = create_AND_table([0.5, 1, 1])\n",
+    "cpd_c = TabularCPD('C', 2, cpt_c.T, ['A', 'MITM', 'Imp'], [2, 2, 2])\n",
+    "cpt_d = create_OR_table([1, 1])\n",
+    "cpd_d = TabularCPD('D', 2, cpt_d.T, ['B', 'C'], [2, 2])\n",
     "\n",
-    "    virt_evidence = TabularCPD(variable=\"D\", variable_card=2, values=[[0.9], [0.1]])\n",
-    "\n",
-    "    bayesian_model.add_cpds(cpd_a, cpd_b, cpd_c, cpd_d)\n",
-    "    belief_propagation = BeliefPropagation(bayesian_model)\n",
-    "    print(belief_propagation.query(variables=['B'], virtual_evidence=[virt_evidence], show_progress=False))\n",
-    "    print(belief_propagation.query(variables=['C'], evidence={'D': 1}))\n",
+    "bayesian_model.add_cpds(cpd_a, cpd_b, cpd_c, cpd_d, cpd_imp, cpd_pe, cpd_mitm)\n",
+    "belief_propagation = BeliefPropagation(bayesian_model)\n",
+    "print(bayesian_model.get_cpds('Imp'))\n",
+    "print(belief_propagation.query(variables=['D'], show_progress=True))\n",
+    "# print(belief_propagation.query(variables=['B'], evidence={'Imp' : 1}, show_progress=False))\n",
     "# bayesian_model = BayesianNetwork([('A', 'B'), ('B', 'C'), ('C', 'D')])\n",
     "# cpt_a = create_OR_table([])\n",
     "# cpd_a = TabularCPD('A', 2, cpt_a.T)\n",
