Fabrication du tool layer et du skills layer

--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -214,45 +214,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:pgmpy:Replacing existing CPD for 15\n"
+      "WARNING:pgmpy:Replacing existing CPD for 15\n",
+      "WARNING:pgmpy:Replacing existing CPD for 18\n",
+      "WARNING:pgmpy:Replacing existing CPD for 20\n",
+      "WARNING:pgmpy:Replacing existing CPD for 24\n",
+      "WARNING:pgmpy:Replacing existing CPD for 14\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.11592\n",
-      "[16, 'Impacket']\n",
-      "+----------+-------------+-------------+-------------+-------------+\n",
-      "| 16       | 16(0)       | 16(0)       | 16(1)       | 16(1)       |\n",
-      "+----------+-------------+-------------+-------------+-------------+\n",
-      "| Impacket | Impacket(0) | Impacket(1) | Impacket(0) | Impacket(1) |\n",
-      "+----------+-------------+-------------+-------------+-------------+\n",
-      "| 15(0)    | 1.0         | 1.0         | 1.0         | 0.88408     |\n",
-      "+----------+-------------+-------------+-------------+-------------+\n",
-      "| 15(1)    | 0.0         | 0.0         | 0.0         | 0.11592     |\n",
-      "+----------+-------------+-------------+-------------+-------------+\n"
+      "The variable Metasploit already exists in the BAG\n",
+      "+-------+-------+-------+-------+-----+-------+-------+-------+-------+\n",
+      "| 15    | 15(0) | 15(0) | 15(0) | ... | 15(1) | 15(1) | 15(1) | 15(1) |\n",
+      "+-------+-------+-------+-------+-----+-------+-------+-------+-------+\n",
+      "| 18    | 18(0) | 18(0) | 18(0) | ... | 18(1) | 18(1) | 18(1) | 18(1) |\n",
+      "+-------+-------+-------+-------+-----+-------+-------+-------+-------+\n",
+      "| 20    | 20(0) | 20(0) | 20(1) | ... | 20(0) | 20(0) | 20(1) | 20(1) |\n",
+      "+-------+-------+-------+-------+-----+-------+-------+-------+-------+\n",
+      "| 24    | 24(0) | 24(1) | 24(0) | ... | 24(0) | 24(1) | 24(0) | 24(1) |\n",
+      "+-------+-------+-------+-------+-----+-------+-------+-------+-------+\n",
+      "| 14(0) | 1.0   | 0.0   | 0.0   | ... | 0.0   | 0.0   | 0.0   | 0.0   |\n",
+      "+-------+-------+-------+-------+-----+-------+-------+-------+-------+\n",
+      "| 14(1) | 0.0   | 1.0   | 1.0   | ... | 1.0   | 1.0   | 1.0   | 1.0   |\n",
+      "+-------+-------+-------+-------+-----+-------+-------+-------+-------+\n",
+      "+---------+---+\n",
+      "| MITM(0) | 0 |\n",
+      "+---------+---+\n",
+      "| MITM(1) | 1 |\n",
+      "+---------+---+\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\factors\\discrete\\DiscreteFactor.py:796: RuntimeWarning: invalid value encountered in divide\n",
+      "  phi.values = phi.values / phi1.values\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-----------+\n",
+      "| 14    |   phi(14) |\n",
+      "+=======+===========+\n",
+      "| 14(0) |    0.6019 |\n",
+      "+-------+-----------+\n",
+      "| 14(1) |    0.3981 |\n",
+      "+-------+-----------+\n",
+      "+-------+-----------+\n",
+      "| 15    |   phi(15) |\n",
+      "+=======+===========+\n",
+      "| 15(0) |    0.9500 |\n",
+      "+-------+-----------+\n",
+      "| 15(1) |    0.0500 |\n",
+      "+-------+-----------+\n",
+      "+-------+-----------+\n",
+      "| 18    |   phi(18) |\n",
+      "+=======+===========+\n",
+      "| 18(0) |    0.9750 |\n",
+      "+-------+-----------+\n",
+      "| 18(1) |    0.0250 |\n",
+      "+-------+-----------+\n",
+      "+-------+-----------+\n",
+      "| 20    |   phi(20) |\n",
+      "+=======+===========+\n",
+      "| 20(0) |    0.9181 |\n",
+      "+-------+-----------+\n",
+      "| 20(1) |    0.0819 |\n",
+      "+-------+-----------+\n",
+      "+-------+-----------+\n",
+      "| 24    |   phi(24) |\n",
+      "+=======+===========+\n",
+      "| 24(0) |    0.6724 |\n",
+      "+-------+-----------+\n",
+      "| 24(1) |    0.3276 |\n",
+      "+-------+-----------+\n",
+      "+-------+-----------+\n",
+      "| 14    |   phi(14) |\n",
+      "+=======+===========+\n",
+      "| 14(0) |    0.1601 |\n",
+      "+-------+-----------+\n",
+      "| 14(1) |    0.8399 |\n",
+      "+-------+-----------+\n"
      ]
     }
    ],
    "source": [
-    "# Report sur MS08-M68\n",
-    "BAG.add_edge('Impacket', 15)\n",
-    "p = BAG.get_cpds(15).values[-1][-1]\n",
-    "print(p)\n",
-    "print(BAG.get_parents(15))\n",
+    "# The skills layer:\n",
+    "cpd_ALskills = TabularCPD('ALskills', 2, [[0], [1]])\n",
+    "cpd_AHskills = TabularCPD('AHskills', 2, [[1], [0]])\n",
+    "cpd_0skills = TabularCPD('0skills', 2, [[0.5], [0.5]])\n",
+    "BAG.add_edge('ALskills', 'Lskills')\n",
+    "BAG.add_edge('ALskills', 'Hskills')\n",
+    "BAG.add_edge('AHskills', 'Hskills')\n",
+    "BAG.add_edge('Hskills', 'Lskills')\n",
+    "cpd_Lskills = TabularCPD('Lskills', 2, create_OR_table([0.9, 1]).T, ['ALskills', 'Hskills'], evidence_card=2*np.ones(2))\n",
+    "cpd_Hskills = TabularCPD('Hskills', 2, create_OR_table([0.1, 0.9]).T, ['ALskills', 'AHskills'], evidence_card=2*np.ones(2))\n",
     "\n",
-    "cpt_15 = create_AND_table([p, 1]) # En vrai ce sera 1\n",
+    "# The tools layer:\n",
+    "cpd_Aimpacket = TabularCPD('Aimpacket', 2, [[0], [1]])\n",
+    "cpd_Aimpacketplus = TabularCPD('Aimpacket+', 2, [[1], [0]])\n",
+    "BAG.add_edge('Aimpacket', 'impacket+')\n",
+    "BAG.add_edge('Aimpacket', 'impacket')\n",
+    "BAG.add_edge('Aimpacket+', 'impacket+')\n",
+    "BAG.add_edge('impacket+', 'impacket')\n",
+    "cpd_impacket = TabularCPD('impacket', 2, create_OR_table([1, 1]).T, ['Aimpacket', 'impacket+'], evidence_card=2*np.ones(2))\n",
+    "cpd_impacketplus = TabularCPD('impacket+', 2, create_OR_table([0.9, 1]).T, ['Aimpacket', 'Aimpacket+'], evidence_card=2*np.ones(2))\n",
+    "cpd_tools = [TabularCPD(tool, 2, [[0.5], [0.5]]) for tool in ['Metasploit', 'Responder', 'dnscmd.exe', 'certipy']]\n",
+    "\n",
+    "\n",
+    "# The knowledge layer:\n",
+    "cpd_known_vuln = TabularCPD('Known vulnerabilities', 2, [[0.5], [0.5]])\n",
+    "cpd_cqcm = TabularCPD('CQCM', 2, [[0.5], [0.5]])\n",
+    "cpd_mitm = TabularCPD('MITM', 2, [[0], [1]])\n",
+    "\n",
+    "cpt_15 = create_AND_table([1, 1, 1, 1])\n",
+    "\n",
+    "# Report sur MS08-M68\n",
+    "BAG.add_edge('Metasploit', 15)\n",
+    "BAG.add_edge('0skills', 15)\n",
+    "BAG.add_edge('MITM', 15)\n",
     "newlist = BAG.get_parents(15)\n",
-    "BAG.add_cpds(TabularCPD(15, 2, cpt_15.T, newlist , evidence_card=2*np.ones(len(newlist)))) \n",
-    "print(BAG.get_cpds(15))"
+    "BAG.add_cpds(TabularCPD(15, 2, cpt_15.T, newlist , evidence_card=2*np.ones(len(newlist))))\n",
+    "# Report sur CVE-2014-1812\n",
+    "BAG.add_edge('Metasploit', 18)\n",
+    "BAG.add_edge('0skills', 18)\n",
+    "BAG.add_edge('CQCM', 18)\n",
+    "newlist = BAG.get_parents(18)\n",
+    "BAG.add_cpds(TabularCPD(18, 2, cpt_15.T, newlist, evidence_card=2*np.ones(len(newlist))))\n",
+    "# Report sur CVE-2020-1472\n",
+    "BAG.add_edge('impacket+', 20)\n",
+    "BAG.add_edge('Lskills', 20)\n",
+    "BAG.add_edge('CQCM', 20)\n",
+    "newlist = BAG.get_parents(20)\n",
+    "BAG.add_cpds(TabularCPD(20, 2, cpt_15.T, newlist, evidence_card=2*np.ones(len(newlist))))\n",
+    "# Report sur CVE-2021-1675\n",
+    "BAG.add_edge('impacket+', 24)\n",
+    "BAG.add_edge('Lskills', 24)\n",
+    "BAG.add_edge('Known vulnerabilities', 24)\n",
+    "newlist = BAG.get_parents(24)\n",
+    "BAG.add_cpds(TabularCPD(24, 2, cpt_15.T, newlist, evidence_card=2*np.ones(len(newlist))))\n",
+    "\n",
+    "\n",
+    "BAG.add_cpds(cpd_mitm, cpd_0skills, cpd_cqcm, cpd_impacketplus, cpd_Lskills, cpd_known_vuln, cpd_ALskills, cpd_AHskills, cpd_Hskills, cpd_Aimpacket, cpd_Aimpacketplus, cpd_impacket)\n",
+    "for tool_cpd in cpd_tools:\n",
+    "    if BAG.__contains__(tool_cpd.variable):\n",
+    "        BAG.add_cpds(tool_cpd)\n",
+    "\n",
+    "BAG.remove_node(19)\n",
+    "BAG.remove_node(21)\n",
+    "BAG.remove_node(22)\n",
+    "BAG.remove_node(23)\n",
+    "BAG.remove_node(25)\n",
+    "BAG.remove_node(26)\n",
+    "cpt_14 = create_OR_table([1, 1, 1, 1])\n",
+    "BAG.add_cpds(TabularCPD(14, 2, cpt_14.T, [15, 18, 20, 24], evidence_card=2*np.ones(4)))\n",
+    "print(BAG.get_cpds(14))\n",
+    "print(BAG.get_cpds('MITM'))\n",
+    "prop = BeliefPropagation(BAG)\n",
+    "tmp = 14\n",
+    "print(prop.query([tmp]))\n",
+    "print(prop.query([15]))\n",
+    "print(prop.query([18]))\n",
+    "print(prop.query([20]))\n",
+    "print(prop.query([24]))\n",
+    "print(prop0.query([tmp]))"
    ]
   },
   {
@@ -276,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +423,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[60], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m get_all_ancestors(BAG_ref, \u001b[38;5;241m1\u001b[39m, honey_pot)\n\u001b[0;32m      3\u001b[0m src_node \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m c_node \u001b[38;5;129;01min\u001b[39;00m \u001b[43mevidence_loc\u001b[49m:\n\u001b[0;32m      5\u001b[0m     get_all_ancestors(BAG_ref, c_node, src_node)\n\u001b[0;32m      6\u001b[0m honey_pot \u001b[38;5;241m=\u001b[39m honey_pot \u001b[38;5;241m-\u001b[39m src_node\n",
+      "Cell \u001b[1;32mIn[83], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m get_all_ancestors(BAG_ref, \u001b[38;5;241m1\u001b[39m, honey_pot)\n\u001b[0;32m      3\u001b[0m src_node \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m c_node \u001b[38;5;129;01min\u001b[39;00m \u001b[43mevidence_loc\u001b[49m:\n\u001b[0;32m      5\u001b[0m     get_all_ancestors(BAG_ref, c_node, src_node)\n\u001b[0;32m      6\u001b[0m honey_pot \u001b[38;5;241m=\u001b[39m honey_pot \u001b[38;5;241m-\u001b[39m src_node\n",
       "\u001b[1;31mNameError\u001b[0m: name 'evidence_loc' is not defined"
      ]
     }
