--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,12 +148,26 @@
     "    ancestors.update(parents)\n",
     "    for p in parents:\n",
     "        get_all_ancestors(BAG, p, ancestors)\n",
-    "    return ancestors\n"
+    "    return ancestors\n",
+    "\n",
+    "def to_dot(BAG, nodes):\n",
+    "    dot = 'digraph G {\\n'\n",
+    "    prop = BeliefPropagation(BAG)\n",
+    "    for node in BAG.nodes():\n",
+    "        color = 'red' if prop.query([node]).values[1] > 0.5 else 'black'\n",
+    "        try:\n",
+    "            dot += f'  {node} [label=\"{nodes[node]['label']}\\\\n{nodes[node]['CVE']}\", color=\"{color}\"];\\n'\n",
+    "        except:\n",
+    "            dot += f'  {node} [label=\"{node}\", color=\"{color}\"];\\n'\n",
+    "    for edge in BAG.edges():\n",
+    "        dot += f'  {edge[0]} -> {edge[1]};\\n'\n",
+    "    dot += '}'\n",
+    "    return dot\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -163,20 +177,19 @@
       "2:RULE 10 (permissions move):0.8\n",
       "2:RULE 10 (permissions move):0.8\n",
       "4:RULE 6 (valid credentials may be found):0.8\n",
-      "24:RULE 3 (host may be vulnerable):0.2\n",
-      "45:RULE 5 (low access is possible):0.8\n"
+      "22:RULE 3 (host may be vulnerable):0.2\n"
      ]
     }
    ],
    "source": [
     "# Name of the simulation\n",
-    "simulation = \"OCD_pentest\"\n",
+    "simulation = \"selection\"\n",
     "\n",
     "# Path to the folder containing the tree\n",
     "path = \"C:/Users/docuser/Documents/ImperialWork/Personnal_simulations/output_\" + simulation + \"/strongly_connected_components/\"\n",
     "file_name = \"ag-nocycles.dot\"\n",
     "path_to_dot = path + file_name\n",
-    "output_file = path + file_name[:-4] + \"_inference.txt\"\n",
+    "output_file = path + file_name[:-4] + \"_colored.dot\"\n",
     "\n",
     "# We all read from the file, adding probabilities in the same time\n",
     "BAG, edges, nodes = parse_dot(open(path_to_dot, 'r').read())\n",
@@ -191,20 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+-------+---------+\n",
-      "| 16    | 16(0) | 16(1)   |\n",
-      "+-------+-------+---------+\n",
-      "| 15(0) | 1.0   | 0.88408 |\n",
-      "+-------+-------+---------+\n",
-      "| 15(1) | 0.0   | 0.11592 |\n",
-      "+-------+-------+---------+\n"
+      "+-------+-------+-----------------------+\n",
+      "| 16    | 16(0) | 16(1)                 |\n",
+      "+-------+-------+-----------------------+\n",
+      "| 15(0) | 1.0   | 9.999999994736442e-08 |\n",
+      "+-------+-------+-----------------------+\n",
+      "| 15(1) | 0.0   | 0.9999999             |\n",
+      "+-------+-------+-----------------------+\n"
      ]
     }
    ],
@@ -214,99 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:pgmpy:Replacing existing CPD for 15\n",
-      "WARNING:pgmpy:Replacing existing CPD for 18\n",
-      "WARNING:pgmpy:Replacing existing CPD for 20\n",
-      "WARNING:pgmpy:Replacing existing CPD for 24\n",
-      "WARNING:pgmpy:Replacing existing CPD for 14\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The variable Metasploit already exists in the BAG\n",
-      "+-------+-------+-------+-------+-----+-------+-------+-------+-------+\n",
-      "| 15    | 15(0) | 15(0) | 15(0) | ... | 15(1) | 15(1) | 15(1) | 15(1) |\n",
-      "+-------+-------+-------+-------+-----+-------+-------+-------+-------+\n",
-      "| 18    | 18(0) | 18(0) | 18(0) | ... | 18(1) | 18(1) | 18(1) | 18(1) |\n",
-      "+-------+-------+-------+-------+-----+-------+-------+-------+-------+\n",
-      "| 20    | 20(0) | 20(0) | 20(1) | ... | 20(0) | 20(0) | 20(1) | 20(1) |\n",
-      "+-------+-------+-------+-------+-----+-------+-------+-------+-------+\n",
-      "| 24    | 24(0) | 24(1) | 24(0) | ... | 24(0) | 24(1) | 24(0) | 24(1) |\n",
-      "+-------+-------+-------+-------+-----+-------+-------+-------+-------+\n",
-      "| 14(0) | 1.0   | 0.0   | 0.0   | ... | 0.0   | 0.0   | 0.0   | 0.0   |\n",
-      "+-------+-------+-------+-------+-----+-------+-------+-------+-------+\n",
-      "| 14(1) | 0.0   | 1.0   | 1.0   | ... | 1.0   | 1.0   | 1.0   | 1.0   |\n",
-      "+-------+-------+-------+-------+-----+-------+-------+-------+-------+\n",
-      "+---------+---+\n",
-      "| MITM(0) | 0 |\n",
-      "+---------+---+\n",
-      "| MITM(1) | 1 |\n",
-      "+---------+---+\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\factors\\discrete\\DiscreteFactor.py:796: RuntimeWarning: invalid value encountered in divide\n",
-      "  phi.values = phi.values / phi1.values\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+-----------+\n",
-      "| 14    |   phi(14) |\n",
-      "+=======+===========+\n",
-      "| 14(0) |    0.6019 |\n",
-      "+-------+-----------+\n",
-      "| 14(1) |    0.3981 |\n",
-      "+-------+-----------+\n",
-      "+-------+-----------+\n",
-      "| 15    |   phi(15) |\n",
-      "+=======+===========+\n",
-      "| 15(0) |    0.9500 |\n",
-      "+-------+-----------+\n",
-      "| 15(1) |    0.0500 |\n",
-      "+-------+-----------+\n",
-      "+-------+-----------+\n",
-      "| 18    |   phi(18) |\n",
-      "+=======+===========+\n",
-      "| 18(0) |    0.9750 |\n",
-      "+-------+-----------+\n",
-      "| 18(1) |    0.0250 |\n",
-      "+-------+-----------+\n",
-      "+-------+-----------+\n",
-      "| 20    |   phi(20) |\n",
-      "+=======+===========+\n",
-      "| 20(0) |    0.9181 |\n",
-      "+-------+-----------+\n",
-      "| 20(1) |    0.0819 |\n",
-      "+-------+-----------+\n",
-      "+-------+-----------+\n",
-      "| 24    |   phi(24) |\n",
-      "+=======+===========+\n",
-      "| 24(0) |    0.6724 |\n",
-      "+-------+-----------+\n",
-      "| 24(1) |    0.3276 |\n",
-      "+-------+-----------+\n",
-      "+-------+-----------+\n",
-      "| 14    |   phi(14) |\n",
-      "+=======+===========+\n",
-      "| 14(0) |    0.1601 |\n",
-      "+-------+-----------+\n",
-      "| 14(1) |    0.8399 |\n",
-      "+-------+-----------+\n"
+      "WARNING:pgmpy:Replacing existing CPD for 17\n",
+      "WARNING:pgmpy:Replacing existing CPD for 19\n"
      ]
     }
    ],
@@ -324,13 +253,13 @@
     "\n",
     "# The tools layer:\n",
     "cpd_Aimpacket = TabularCPD('Aimpacket', 2, [[0], [1]])\n",
-    "cpd_Aimpacketplus = TabularCPD('Aimpacket+', 2, [[1], [0]])\n",
-    "BAG.add_edge('Aimpacket', 'impacket+')\n",
+    "cpd_Aimpacketplus = TabularCPD('AimpacketP', 2, [[1], [0]])\n",
+    "BAG.add_edge('Aimpacket', 'impacketP')\n",
     "BAG.add_edge('Aimpacket', 'impacket')\n",
-    "BAG.add_edge('Aimpacket+', 'impacket+')\n",
-    "BAG.add_edge('impacket+', 'impacket')\n",
-    "cpd_impacket = TabularCPD('impacket', 2, create_OR_table([1, 1]).T, ['Aimpacket', 'impacket+'], evidence_card=2*np.ones(2))\n",
-    "cpd_impacketplus = TabularCPD('impacket+', 2, create_OR_table([0.9, 1]).T, ['Aimpacket', 'Aimpacket+'], evidence_card=2*np.ones(2))\n",
+    "BAG.add_edge('AimpacketP', 'impacketP')\n",
+    "BAG.add_edge('impacketP', 'impacket')\n",
+    "cpd_impacket = TabularCPD('impacket', 2, create_OR_table([1, 1]).T, ['Aimpacket', 'impacketP'], evidence_card=2*np.ones(2))\n",
+    "cpd_impacketplus = TabularCPD('impacketP', 2, create_OR_table([0.9, 1]).T, ['Aimpacket', 'AimpacketP'], evidence_card=2*np.ones(2))\n",
     "cpd_tools = [TabularCPD(tool, 2, [[0.5], [0.5]]) for tool in ['Metasploit', 'Responder', 'dnscmd.exe', 'certipy']]\n",
     "\n",
     "\n",
@@ -341,55 +270,55 @@
     "\n",
     "cpt_15 = create_AND_table([1, 1, 1, 1])\n",
     "\n",
-    "# Report sur MS08-M68\n",
-    "BAG.add_edge('Metasploit', 15)\n",
-    "BAG.add_edge('0skills', 15)\n",
-    "BAG.add_edge('MITM', 15)\n",
-    "newlist = BAG.get_parents(15)\n",
-    "BAG.add_cpds(TabularCPD(15, 2, cpt_15.T, newlist , evidence_card=2*np.ones(len(newlist))))\n",
-    "# Report sur CVE-2014-1812\n",
-    "BAG.add_edge('Metasploit', 18)\n",
-    "BAG.add_edge('0skills', 18)\n",
-    "BAG.add_edge('CQCM', 18)\n",
-    "newlist = BAG.get_parents(18)\n",
-    "BAG.add_cpds(TabularCPD(18, 2, cpt_15.T, newlist, evidence_card=2*np.ones(len(newlist))))\n",
     "# Report sur CVE-2020-1472\n",
-    "BAG.add_edge('impacket+', 20)\n",
-    "BAG.add_edge('Lskills', 20)\n",
-    "BAG.add_edge('CQCM', 20)\n",
-    "newlist = BAG.get_parents(20)\n",
-    "BAG.add_cpds(TabularCPD(20, 2, cpt_15.T, newlist, evidence_card=2*np.ones(len(newlist))))\n",
+    "id = 17\n",
+    "BAG.add_edge('impacketP', 17)\n",
+    "BAG.add_edge('Lskills', id)\n",
+    "BAG.add_edge('CQCM', id)\n",
+    "newlist = BAG.get_parents(id)\n",
+    "BAG.add_cpds(TabularCPD(id, 2, cpt_15.T, newlist, evidence_card=2*np.ones(len(newlist))))\n",
     "# Report sur CVE-2021-1675\n",
-    "BAG.add_edge('impacket+', 24)\n",
-    "BAG.add_edge('Lskills', 24)\n",
-    "BAG.add_edge('Known vulnerabilities', 24)\n",
-    "newlist = BAG.get_parents(24)\n",
-    "BAG.add_cpds(TabularCPD(24, 2, cpt_15.T, newlist, evidence_card=2*np.ones(len(newlist))))\n",
+    "id = 19\n",
+    "BAG.add_edge('impacketP', id)\n",
+    "BAG.add_edge('Lskills', id)\n",
+    "BAG.add_edge('Known vulnerabilities', id)\n",
+    "newlist = BAG.get_parents(id)\n",
+    "BAG.add_cpds(TabularCPD(id, 2, cpt_15.T, newlist, evidence_card=2*np.ones(len(newlist))))\n",
     "\n",
     "\n",
-    "BAG.add_cpds(cpd_mitm, cpd_0skills, cpd_cqcm, cpd_impacketplus, cpd_Lskills, cpd_known_vuln, cpd_ALskills, cpd_AHskills, cpd_Hskills, cpd_Aimpacket, cpd_Aimpacketplus, cpd_impacket)\n",
+    "for cpd in [cpd_mitm, cpd_0skills, cpd_cqcm, cpd_impacketplus, cpd_Lskills, cpd_known_vuln, cpd_ALskills, cpd_AHskills, cpd_Hskills, cpd_Aimpacket, cpd_Aimpacketplus, cpd_impacket]:\n",
+    "    if BAG.__contains__(cpd.variable):\n",
+    "        BAG.add_cpds(cpd)\n",
     "for tool_cpd in cpd_tools:\n",
     "    if BAG.__contains__(tool_cpd.variable):\n",
-    "        BAG.add_cpds(tool_cpd)\n",
-    "\n",
-    "BAG.remove_node(19)\n",
-    "BAG.remove_node(21)\n",
-    "BAG.remove_node(22)\n",
-    "BAG.remove_node(23)\n",
-    "BAG.remove_node(25)\n",
-    "BAG.remove_node(26)\n",
-    "cpt_14 = create_OR_table([1, 1, 1, 1])\n",
-    "BAG.add_cpds(TabularCPD(14, 2, cpt_14.T, [15, 18, 20, 24], evidence_card=2*np.ones(4)))\n",
-    "print(BAG.get_cpds(14))\n",
-    "print(BAG.get_cpds('MITM'))\n",
-    "prop = BeliefPropagation(BAG)\n",
-    "tmp = 14\n",
-    "print(prop.query([tmp]))\n",
-    "print(prop.query([15]))\n",
-    "print(prop.query([18]))\n",
-    "print(prop.query([20]))\n",
-    "print(prop.query([24]))\n",
-    "print(prop0.query([tmp]))"
+    "        BAG.add_cpds(tool_cpd)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\factors\\discrete\\DiscreteFactor.py:796: RuntimeWarning: invalid value encountered in divide\n",
+      "  phi.values = phi.values / phi1.values\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:/Users/docuser/Documents/ImperialWork/Personnal_simulations/output_selection/strongly_connected_components/ag-nocycles_colored.dot\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(output_file, 'w') as f:\n",
+    "    f.write(to_dot(BAG, nodes))\n",
+    "print(output_file)"
    ]
   },
   {
@@ -413,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +352,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[83], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m get_all_ancestors(BAG_ref, \u001b[38;5;241m1\u001b[39m, honey_pot)\n\u001b[0;32m      3\u001b[0m src_node \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m c_node \u001b[38;5;129;01min\u001b[39;00m \u001b[43mevidence_loc\u001b[49m:\n\u001b[0;32m      5\u001b[0m     get_all_ancestors(BAG_ref, c_node, src_node)\n\u001b[0;32m      6\u001b[0m honey_pot \u001b[38;5;241m=\u001b[39m honey_pot \u001b[38;5;241m-\u001b[39m src_node\n",
+      "Cell \u001b[1;32mIn[139], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m get_all_ancestors(BAG_ref, \u001b[38;5;241m1\u001b[39m, honey_pot)\n\u001b[0;32m      3\u001b[0m src_node \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m c_node \u001b[38;5;129;01min\u001b[39;00m \u001b[43mevidence_loc\u001b[49m:\n\u001b[0;32m      5\u001b[0m     get_all_ancestors(BAG_ref, c_node, src_node)\n\u001b[0;32m      6\u001b[0m honey_pot \u001b[38;5;241m=\u001b[39m honey_pot \u001b[38;5;241m-\u001b[39m src_node\n",
       "\u001b[1;31mNameError\u001b[0m: name 'evidence_loc' is not defined"
      ]
     }
