pour nouvelle tentative coté serveur

--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,27 +159,23 @@
     "    for node in  nodes.keys():\n",
     "        print(node)\n",
     "        if node not in evidences.keys():\n",
-    "            try:\n",
-    "                # prob = prop.query([node], evidence=evidences).values[1]\n",
-    "                prob = 0.000\n",
-    "                print(prob)\n",
-    "                probH = int(prob * 255)\n",
-    "                color = '#' + format(probH, '02X') +''+ format(255-probH, '02X') + '00'\n",
-    "                CVE = nodes[node]['CVE']\n",
-    "                LABEL = nodes[node]['label']\n",
-    "                number = LABEL.split(\":\")[0]\n",
-    "                prob = \"{:.3f}\".format(prob)\n",
-    "                shape = nodes[node]['shape']\n",
-    "                if CVE != 'null':\n",
-    "                    dot += f'  {node} [label=\\\"{node} ({number})\\\\n{CVE}\\\\n{prob}\\\", color=\\\"{color}\\\", penwidth=3, shape=\\\"{shape}\\\"];\\n'\n",
+    "            prob = prop.query([node], evidence=evidences).values[1]\n",
+    "            # prob = 0.000\n",
+    "            probH = int(prob * 255)\n",
+    "            color = '#' + format(probH, '02X') +''+ format(255-probH, '02X') + '00'\n",
+    "            CVE = nodes[node]['CVE']\n",
+    "            LABEL = nodes[node]['label']\n",
+    "            number = LABEL.split(\":\")[0]\n",
+    "            prob = \"{:.3f}\".format(prob)\n",
+    "            shape = nodes[node]['shape']\n",
+    "            if CVE != 'null':\n",
+    "                dot += f'  {node} [label=\\\"{node} ({number})\\\\n{CVE}\\\\n{prob}\\\", color=\\\"{color}\\\", penwidth=3, shape=\\\"{shape}\\\"];\\n'\n",
+    "            else:\n",
+    "                correspondance = re.search(regex, LABEL)\n",
+    "                if correspondance:\n",
+    "                    dot += f'  {node} [label=\\\"{node} ({number})\\\\n{correspondance.group(1)}\\\\n{prob}\\\", color=\\\"{color}\\\", penwidth=3, shape=\\\"{shape}\\\"];\\n'\n",
     "                else:\n",
-    "                    correspondance = re.search(regex, LABEL)\n",
-    "                    if correspondance:\n",
-    "                        dot += f'  {node} [label=\\\"{node} ({number})\\\\n{correspondance.group(1)}\\\\n{\"{:.3f}\".format(prob)}\\\", color=\\\"{color}\\\", penwidth=3, shape=\\\"{shape}\\\"];\\n'\n",
-    "                    else:\n",
-    "                        dot += f'  {node} [label=\"{node} ({number})\\\\n{LABEL}\\\\n{\"{:.3f}\".format(prob)}\", color=\"{color}\", penwidth=3, shape=\"{shape}\"];\\n'\n",
-    "            except:\n",
-    "                dot += ''\n",
+    "                    dot += f'  {node} [label=\"{node} ({number})\\\\n{LABEL}\\\\n{prob}\", color=\"{color}\", penwidth=3, shape=\"{shape}\"];\\n'\n",
     "    for edge in BAG.edges():\n",
     "        if edge[0] in nodes.keys() and edge[1] in nodes.keys():\n",
     "            dot += f'  {edge[0]} -> {edge[1]};\\n'\n",
@@ -189,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -337,38 +333,22 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "0.0\n",
       "2\n",
-      "0.0\n",
       "3\n",
-      "0.0\n",
       "4\n",
-      "0.0\n",
       "5\n",
-      "0.0\n",
       "6\n",
-      "0.0\n",
       "7\n",
-      "0.0\n",
       "8\n",
-      "0.0\n",
       "1\n",
-      "0.0\n",
       "2\n",
-      "0.0\n",
       "3\n",
-      "0.0\n",
       "4\n",
-      "0.0\n",
       "5\n",
-      "0.0\n",
       "6\n",
-      "0.0\n",
       "7\n",
-      "0.0\n",
       "8\n",
-      "0.0\n",
-      "/homes/nmh24/ImperialWork/Personnal_simulations/output_selection/strongly_connected_components/ag-nocycles_colored.dot\n"
+      "c:\\Users\\docuser\\Documents\\ImperialWork\\Personnal_simulations\\output_selection\\strongly_connected_components\\ag-nocycles_colored.dot\n"
      ]
     }
    ],
@@ -392,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +405,14 @@
       "    [0.000e+00 0.000e+00]]\n",
       "\n",
       "   [[0.000e+00 0.000e+00]\n",
-      "    [0.000e+00 9.999e-01]]]]]\n"
+      "    [0.000e+00 9.999e-01]]]]]\n",
+      "+------------+----------------+\n",
+      "| Hskills    |   phi(Hskills) |\n",
+      "+============+================+\n",
+      "| Hskills(0) |         0.9000 |\n",
+      "+------------+----------------+\n",
+      "| Hskills(1) |         0.1000 |\n",
+      "+------------+----------------+\n"
      ]
     },
     {
@@ -434,19 +421,6 @@
      "text": [
       "c:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\factors\\discrete\\DiscreteFactor.py:796: RuntimeWarning: invalid value encountered in divide\n",
       "  phi.values = phi.values / phi1.values\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------------+----------------+\n",
-      "| Hskills    |   phi(Hskills) |\n",
-      "+============+================+\n",
-      "| Hskills(0) |         0.9000 |\n",
-      "+------------+----------------+\n",
-      "| Hskills(1) |         0.1000 |\n",
-      "+------------+----------------+\n"
      ]
     }
    ],
@@ -460,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +444,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[352], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m get_all_ancestors(BAG_ref, \u001b[38;5;241m1\u001b[39m, honey_pot)\n\u001b[0;32m      3\u001b[0m src_node \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m c_node \u001b[38;5;129;01min\u001b[39;00m \u001b[43mevidence_loc\u001b[49m:\n\u001b[0;32m      5\u001b[0m     get_all_ancestors(BAG_ref, c_node, src_node)\n\u001b[0;32m      6\u001b[0m honey_pot \u001b[38;5;241m=\u001b[39m honey_pot \u001b[38;5;241m-\u001b[39m src_node\n",
+      "Cell \u001b[1;32mIn[34], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m get_all_ancestors(BAG_ref, \u001b[38;5;241m1\u001b[39m, honey_pot)\n\u001b[0;32m      3\u001b[0m src_node \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m c_node \u001b[38;5;129;01min\u001b[39;00m \u001b[43mevidence_loc\u001b[49m:\n\u001b[0;32m      5\u001b[0m     get_all_ancestors(BAG_ref, c_node, src_node)\n\u001b[0;32m      6\u001b[0m honey_pot \u001b[38;5;241m=\u001b[39m honey_pot \u001b[38;5;241m-\u001b[39m src_node\n",
       "\u001b[1;31mNameError\u001b[0m: name 'evidence_loc' is not defined"
      ]
     }
