Dernier avant suppression du parallélisme

--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,13 @@
       "WARNING:pgmpy:Replacing existing CPD for 8\n",
       "WARNING:pgmpy:Replacing existing CPD for 10\n",
       "WARNING:pgmpy:Replacing existing CPD for 13\n",
-      "WARNING:pgmpy:Replacing existing CPD for 14\n",
+      "WARNING:pgmpy:Replacing existing CPD for 14\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "WARNING:pgmpy:Replacing existing CPD for 16\n",
       "WARNING:pgmpy:Replacing existing CPD for 17\n",
       "WARNING:pgmpy:Replacing existing CPD for 19\n"
@@ -372,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -393,44 +399,31 @@
       "11\n",
       "12\n",
       "13\n",
-      "14\n",
-      "15\n",
+      "1415\n",
+      "\n",
       "16\n",
       "17\n",
       "18\n",
-      "19\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/homes/nmh24/.local/lib/python3.10/site-packages/pgmpy/factors/discrete/DiscreteFactor.py:796: RuntimeWarning: invalid value encountered in divide\n",
-      "  phi.values = phi.values / phi1.values\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "4\n",
-      "2\n",
-      "9\n",
-      "7\n",
-      "13\n",
-      "15\n",
-      "14\n",
-      "17\n",
       "19\n",
+      "4\n",
+      "1\n",
+      "15\n",
       "3\n",
-      "6\n",
-      "12\n",
+      "19\n",
+      "16\n",
       "5\n",
-      "8\n",
-      "10\n",
-      "11\n",
       "18\n",
+      "13\n",
+      "10\n",
+      "9\n",
+      "12\n",
+      "8\n",
+      "2\n",
+      "17\n",
+      "7\n",
+      "6\n",
+      "11\n",
+      "14\n",
       "BayesianNetwork with 19 nodes and 22 edges\n",
       "1\n",
       "2\n",
@@ -445,36 +438,37 @@
       "11\n",
       "12\n",
       "13\n",
-      "1415\n",
-      "\n",
+      "14\n",
+      "15\n",
       "16\n",
       "17\n",
       "18\n",
       "19\n",
       "3\n",
       "4\n",
-      "6\n",
-      "2\n",
-      "10\n",
-      "9\n",
-      "8\n",
-      "5\n",
-      "7\n",
       "1\n",
-      "12\n",
-      "13\n",
+      "6\n",
+      "5\n",
+      "2\n",
+      "7\n",
+      "9\n",
       "11\n",
-      "17\n",
-      "15\n",
-      "19\n",
-      "14\n",
+      "10\n",
+      "12\n",
       "18\n",
+      "15\n",
+      "8\n",
+      "19\n",
+      "16\n",
+      "13\n",
+      "17\n",
+      "14\n",
       "/homes/nmh24/ImperialWork/Personnal_simulations/output_selection/strongly_connected_components/ag-nocycles_colored.dot\n"
      ]
     }
    ],
    "source": [
-    "evidence = {16 : 1}\n",
+    "evidence = {}\n",
     "with open(output_file, 'w') as f:\n",
     "    f.write(to_dot(BAG, nodes, evidence))\n",
     "with open(path / (\"BAG_ref\" + \".dot\"), 'w') as f:\n",
@@ -493,43 +487,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+-------+-----+--------------------+\n",
-      "| 16    | 16(0) | ... | 16(1)              |\n",
-      "+-------+-------+-----+--------------------+\n",
-      "| 17    | 17(0) | ... | 17(1)              |\n",
-      "+-------+-------+-----+--------------------+\n",
-      "| 15(0) | 1.0   | ... | 0.6400000000000001 |\n",
-      "+-------+-------+-----+--------------------+\n",
-      "| 15(1) | 0.0   | ... | 0.3599999999999999 |\n",
-      "+-------+-------+-----+--------------------+\n",
-      "+------------+----------------+\n",
-      "| Hskills    |   phi(Hskills) |\n",
-      "+============+================+\n",
-      "| Hskills(0) |         0.0000 |\n",
-      "+------------+----------------+\n",
-      "| Hskills(1) |         1.0000 |\n",
-      "+------------+----------------+\n"
+      "+-------+-------+-----+---------------------+\n",
+      "| 16    | 16(0) | ... | 16(1)               |\n",
+      "+-------+-------+-----+---------------------+\n",
+      "| 17    | 17(0) | ... | 17(1)               |\n",
+      "+-------+-------+-----+---------------------+\n",
+      "| 15(0) | 1.0   | ... | 0.03999999999999998 |\n",
+      "+-------+-------+-----+---------------------+\n",
+      "| 15(1) | 0.0   | ... | 0.96                |\n",
+      "+-------+-------+-----+---------------------+\n",
+      "dict_keys([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19])\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'key'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[72], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(BAG\u001b[38;5;241m.\u001b[39mget_cpds(\u001b[38;5;241m15\u001b[39m))\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(nodes\u001b[38;5;241m.\u001b[39mkeys())\n\u001b[0;32m----> 3\u001b[0m nnn \u001b[38;5;241m=\u001b[39m \u001b[43mnodes\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkey\u001b[49m()\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# tab = BeliefPropagation(BAG).query(nnn)\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'key'"
      ]
     }
    ],
    "source": [
-    "\n",
     "print(BAG.get_cpds(15))\n",
-    "print(BeliefPropagation(BAG).query([15], evidence=evidence))\n",
-    "\n",
-    "\n"
+    "print(nodes.keys())\n",
+    "nnn = nodes.keys()\n",
+    "print(nnn)\n",
+    "# tab = BeliefPropagation(BAG).query(nnn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n",
+      "[1, 2, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n",
+      "+------+----------+\n",
+      "| 3    |   phi(3) |\n",
+      "+======+==========+\n",
+      "| 3(0) |   0.8718 |\n",
+      "+------+----------+\n",
+      "| 3(1) |   0.1282 |\n",
+      "+------+----------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(tab)\n",
+    "print(nnn)\n",
+    "nnn.remove(3)\n",
+    "print(nnn)\n",
+    "print(tab.marginalize(nnn, inplace=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:pgmpy:BayesianModel has been renamed to BayesianNetwork. Please use BayesianNetwork class, BayesianModel will be removed in future.\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "BayesianNetwork.add_cpds() got an unexpected keyword argument 'A'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[42], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m model \u001b[38;5;241m=\u001b[39m BayesianModel([(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mA\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m), (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mB\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m)])\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Ajoutez vos probabilités conditionnelles\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_cpds\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[43mA\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.7\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m    \u001b[49m\u001b[43mB\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[43m    \u001b[49m\u001b[43mC\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.9\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.9\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     13\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Obtenez les probabilités marginales de A, B, C en une seule requête\u001b[39;00m\n\u001b[1;32m     16\u001b[0m inference \u001b[38;5;241m=\u001b[39m VariableElimination(model)\n",
+      "\u001b[0;31mTypeError\u001b[0m: BayesianNetwork.add_cpds() got an unexpected keyword argument 'A'"
+     ]
+    }
+   ],
+   "source": [
+    "from pgmpy.models import BayesianModel\n",
+    "from pgmpy.estimators import MaximumLikelihoodEstimator\n",
+    "from pgmpy.inference import VariableElimination\n",
+    "\n",
+    "# Créez votre modèle bayésien\n",
+    "model = BayesianModel([('A', 'C'), ('B', 'C')])\n",
+    "\n",
+    "# Ajoutez vos probabilités conditionnelles\n",
+    "model.add_cpds(\n",
+    "    A=[0.3, 0.7],\n",
+    "    B=[0.5, 0.5],\n",
+    "    C=[[0.9, 0.6, 0.7, 0.1], [0.1, 0.4, 0.3, 0.9]]\n",
+    ")\n",
+    "\n",
+    "# Obtenez les probabilités marginales de A, B, C en une seule requête\n",
+    "inference = VariableElimination(model)\n",
+    "probabilities = inference.query(variables=['A', 'B', 'C'])\n",
+    "\n",
+    "# Affichez les probabilités marginales\n",
+    "print(probabilities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +614,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[96], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m get_all_ancestors(BAG_ref, \u001b[38;5;241m1\u001b[39m, honey_pot)\n\u001b[1;32m      3\u001b[0m src_node \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m c_node \u001b[38;5;129;01min\u001b[39;00m \u001b[43mevidence_loc\u001b[49m:\n\u001b[1;32m      5\u001b[0m     get_all_ancestors(BAG_ref, c_node, src_node)\n\u001b[1;32m      6\u001b[0m honey_pot \u001b[38;5;241m=\u001b[39m honey_pot \u001b[38;5;241m-\u001b[39m src_node\n",
+      "Cell \u001b[0;32mIn[18], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m get_all_ancestors(BAG_ref, \u001b[38;5;241m1\u001b[39m, honey_pot)\n\u001b[1;32m      3\u001b[0m src_node \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m c_node \u001b[38;5;129;01min\u001b[39;00m \u001b[43mevidence_loc\u001b[49m:\n\u001b[1;32m      5\u001b[0m     get_all_ancestors(BAG_ref, c_node, src_node)\n\u001b[1;32m      6\u001b[0m honey_pot \u001b[38;5;241m=\u001b[39m honey_pot \u001b[38;5;241m-\u001b[39m src_node\n",
       "\u001b[0;31mNameError\u001b[0m: name 'evidence_loc' is not defined"
      ]
     }
